[tool.poetry]
name = "cs-g-management"
version = "0.1.0"
description = ""
authors = ["mohammedachbouk <flmusic2000@gmail.com>"]
readme = "README.md"
packages = [{include = "cs_g_management"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
pylint = "^2.15.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
